--- a/src/apps/static/pages/studio/index.html
+++ b/src/apps/static/pages/studio/index.html
@@ -518,6 +518,19 @@
             </div>
           </a>
 
+          <a class="studio-card__link" href="/pin-designer-face-only/">
+            <div class="studio-card">
+              <div class="studio-card__header">
+                <h3 class="studio-card__title">Face Designer</h3>
+                <span class="studio-card__badge studio-card__badge--available">New</span>
+              </div>
+              <p class="studio-card__description">
+                Simplified face-only customization tool. Customize just the face, eyes, and mouth with export.
+              </p>
+              <span class="studio-card__cta">Launch</span>
+            </div>
+          </a>
+
           <a class="studio-card__link" href="/studio/limewire-simulator/">
             <div class="studio-card">
               <div class="studio-card__header">
