--- a/src/index.html
+++ b/src/index.html
@@ -216,38 +216,38 @@
       </div>
       <div class="sliderRow">
         <label for="rbSpeed" title="How fast bubbles rise upward (vertical motion)">Rise Speed</label>
-        <input type="range" min="0" max="3" step="0.01" value="1" id="rbSpeed" title="Bubble rise speed (0 = still)">
+        <input type="range" min="0" max="3" step="0.01" value="1.03" id="rbSpeed" title="Bubble rise speed (0 = still)">
       </div>
       <div class="sliderRow">
         <label for="rbDensity" title="How many bubbles are active (multiplier). 1 = default count, 2 = double.">Count</label>
-        <input type="range" min="0" max="2" step="0.01" value="1" id="rbDensity" title="Bubble count multiplier (0 = none)">
+        <input type="range" min="0" max="2" step="0.01" value="1.46" id="rbDensity" title="Bubble count multiplier (0 = none)">
       </div>
       <div class="sliderRow">
         <label for="rbScale" title="Overall bubble size scaling (separate from Count)">Scale</label>
-        <input type="range" min="0.5" max="2.0" step="0.01" value="1.0" id="rbScale" title="Overall bubble size scale">
+        <input type="range" min="0.5" max="2.0" step="0.01" value="1" id="rbScale" title="Overall bubble size scale">
       </div>
       <div class="sliderRow">
         <label for="rbAlpha" title="Overall opacity of the bubble layer">Alpha</label>
-        <input type="range" min="0" max="1" step="0.01" value="0.95" id="rbAlpha" title="Bubble opacity">
+        <input type="range" min="0" max="1" step="0.01" value="0.87" id="rbAlpha" title="Bubble opacity">
       </div>
       <div class="sectionDivider"></div>
       <div class="sliderRow" style="opacity:.85; font-size:10px; line-height:1.3;">
         <span title="Interaction: drag a bubble on the canvas to throw it. Flick near a bubble to apply a quick impulse. Works on touch and mouse.">Interaction: drag to throw; flick near to kick (touch + mouse).</span>
       </div>
-      <div class="sliderRow"><label for="rbAttract" title="Pointer attracts bubbles (subtle drift toward cursor)">Attract</label><input type="checkbox" id="rbAttract" checked title="Toggle attraction to pointer"> <label for="rbAttractIntensity" title="Strength of attraction force">Intensity</label><input type="range" min="0" max="2" step="0.1" value="1.0" id="rbAttractIntensity" title="Attract intensity"></div>
-      <div class="sliderRow"><label for="rbRipples" title="Click/tap emits a ripple impulse through the field">Ripples</label><input type="checkbox" id="rbRipples" title="Toggle ripple impulses"> <label for="rbRippleIntensity" title="Ripple strength">Intensity</label><input type="range" min="0" max="2" step="0.1" value="1.2" id="rbRippleIntensity" title="Ripple intensity"></div>
+      <div class="sliderRow"><label for="rbAttract" title="Pointer attracts bubbles (subtle drift toward cursor)">Attract</label><input type="checkbox" id="rbAttract" title="Toggle attraction to pointer"> <label for="rbAttractIntensity" title="Strength of attraction force">Intensity</label><input type="range" min="0" max="2" step="0.1" value="0.4" id="rbAttractIntensity" title="Attract intensity"></div>
+      <div class="sliderRow"><label for="rbRipples" title="Click/tap emits a ripple impulse through the field">Ripples</label><input type="checkbox" id="rbRipples" title="Toggle ripple impulses"> <label for="rbRippleIntensity" title="Ripple strength">Intensity</label><input type="range" min="0" max="2" step="0.1" value="0.8" id="rbRippleIntensity" title="Ripple intensity"></div>
     </div>
     <div class="panel-section" data-tab="rb">
       <div class="sectionLabel" title="Shape how bubbles move, spawn, and pulse">Rising Bubbles (Advanced)</div>
       <div class="sliderRow" style="opacity:.85; font-size:10px; line-height:1.3;">
         <span title="Advanced controls change motion style and spawn sizing.">Motion + spawn shaping. Use small changes—some controls amplify each other.</span>
       </div>
-      <div class="sliderRow"><label for="rbWobble" title="Side-to-side motion amplitude (adds lateral drift/oscillation)">Wobble</label><input id="rbWobble" type="range" min="0" max="2" step="0.01" value="1"/></div>
-      <div class="sliderRow"><label for="rbFreq" title="Oscillation rate for wobble (higher = faster wobble)">Frequency</label><input id="rbFreq" type="range" min="0" max="2" step="0.01" value="1"/></div>
+      <div class="sliderRow"><label for="rbWobble" title="Side-to-side motion amplitude (adds lateral drift/oscillation)">Wobble</label><input id="rbWobble" type="range" min="0" max="2" step="0.01" value="0.98"/></div>
+      <div class="sliderRow"><label for="rbFreq" title="Oscillation rate for wobble (higher = faster wobble)">Frequency</label><input id="rbFreq" type="range" min="0" max="2" step="0.01" value="0.95"/></div>
       <div class="sliderRow"><label for="rbMin" title="Smallest bubble size">Min size</label><input id="rbMin" type="number" min="6" max="256" step="1" value="14" title="Smallest bubble size in pixels"/> <label for="rbMax" title="Largest bubble size">Max</label><input id="rbMax" type="number" min="6" max="256" step="1" value="36" title="Largest bubble size in pixels"/></div>
-      <div class="sliderRow"><label for="rbJumboPct" title="Probability (0-60%) that a bubble spawns as a larger 'jumbo' bubble. Higher = more big bubbles.">Jumbo Percent</label><input id="rbJumboPct" type="range" min="0" max="0.6" step="0.01" value="0.1" title="Probability (0-60%) that a bubble spawns as a larger 'jumbo' bubble. Higher = more big bubbles."/></div>
-      <div class="sliderRow"><label for="rbJumboScale" title="Size multiplier for jumbo bubbles. 1.0 = same as max, 2.5 = 2.5x larger than max size.">Jumbo Scale</label><input id="rbJumboScale" type="range" min="1.0" max="2.5" step="0.05" value="1.6" title="Size multiplier for jumbo bubbles. 1.0 = same as max, 2.5 = 2.5x larger than max size."/></div>
-      <div class="sliderRow"><label for="rbSizeHz" title="Speed of bubble size pulsing animation (0 = disabled). Higher values = faster pulsing.">Size Hertz</label><input id="rbSizeHz" type="range" min="0" max="1" step="0.01" value="0.0" title="Speed of bubble size pulsing animation (0 = disabled). Higher values = faster pulsing."/></div>
+      <div class="sliderRow"><label for="rbJumboPct" title="Probability (0-60%) that a bubble spawns as a larger 'jumbo' bubble. Higher = more big bubbles.">Jumbo Percent</label><input id="rbJumboPct" type="range" min="0" max="0.6" step="0.01" value="0.33" title="Probability (0-60%) that a bubble spawns as a larger 'jumbo' bubble. Higher = more big bubbles."/></div>
+      <div class="sliderRow"><label for="rbJumboScale" title="Size multiplier for jumbo bubbles. 1.0 = same as max, 2.5 = 2.5x larger than max size.">Jumbo Scale</label><input id="rbJumboScale" type="range" min="1.0" max="2.5" step="0.05" value="1.95" title="Size multiplier for jumbo bubbles. 1.0 = same as max, 2.5 = 2.5x larger than max size."/></div>
+      <div class="sliderRow"><label for="rbSizeHz" title="Speed of bubble size pulsing animation (0 = disabled). Higher values = faster pulsing.">Size Hertz</label><input id="rbSizeHz" type="range" min="0" max="1" step="0.01" value="0.67" title="Speed of bubble size pulsing animation (0 = disabled). Higher values = faster pulsing."/></div>
       <div class="sectionDivider"></div>
       <div class="sliderRow" style="justify-content:flex-end; gap:8px; flex-wrap:wrap">
         <div style="display:flex; gap:4px">
@@ -283,8 +283,8 @@
 
     <div class="panel-section" data-tab="errl">
       <div class="sectionLabel" title="Overall scale of the Errl image">Errl Size</div>
-      <div class="sliderRow"><label for="errlSize" title="Overall scale of Errl">Size</label><input id="errlSize" type="range" min="0.8" max="1.6" step="0.01" value="1.0" title="Drag to scale Errl"></div>
-      <div class="sliderRow"><label for="errlOutlineThickness" title="Thickness of face, eyes, and mouth outlines">Outlines</label><input id="errlOutlineThickness" type="range" min="1" max="8" step="0.5" value="2" title="Drag to adjust outlines"></div>
+      <div class="sliderRow"><label for="errlSize" title="Overall scale of Errl">Size</label><input id="errlSize" type="range" min="0.8" max="1.6" step="0.01" value="1" title="Drag to scale Errl"></div>
+      <div class="sliderRow"><label for="errlOutlineThickness" title="Thickness of face, eyes, and mouth outlines">Outlines</label><input id="errlOutlineThickness" type="range" min="1" max="8" step="0.5" value="2.5" title="Drag to adjust outlines"></div>
       <div class="sectionDivider"></div>
       <div class="sectionLabel" title="Classic Goo is the SVG-based wobble on the Errl shape (not the Nav Goo+ shader)">Errl Goo (Classic)</div>
       <div class="sliderRow" style="opacity:.85; font-size:10px; line-height:1.3;">
@@ -293,28 +293,28 @@
       <div class="sliderRow"><label for="classicGooEnabled" title="Enable/disable the classic SVG goo wobble on Errl">Goo Enabled</label><input type="checkbox" id="classicGooEnabled" checked title="Toggle classic SVG goo"></div>
       <div class="sliderRow sliderRow--auto">
         <label for="classicGooStrength" title="Amount of displacement wobble applied to the Errl shape">Displacement</label>
-        <input id="classicGooStrength" type="range" min="0" max="1" step="0.001" value="0.5" style="flex:1">
+        <input id="classicGooStrength" type="range" min="0" max="1" step="0.001" value="0.187" style="flex:1">
         <label for="classicGooStrengthAuto" class="autoToggle" style="font-size:7px; letter-spacing:0.08em; text-transform:uppercase;" title="Enable auto fade for displacement">
           <input type="checkbox" id="classicGooStrengthAuto" checked> Auto
         </label>
       </div>
       <div class="sliderRow sliderRow--auto">
         <label for="classicGooWobble" title="Oscillation amplitude of the wobble">Wobble</label>
-        <input id="classicGooWobble" type="range" min="0" max="1" step="0.001" value="0.5" style="flex:1">
+        <input id="classicGooWobble" type="range" min="0" max="1" step="0.001" value="0.432" style="flex:1">
         <label for="classicGooWobbleAuto" class="autoToggle" style="font-size:7px; letter-spacing:0.08em; text-transform:uppercase;" title="Enable auto fade for wobble">
           <input type="checkbox" id="classicGooWobbleAuto" checked> Auto
         </label>
       </div>
       <div class="sliderRow sliderRow--auto">
         <label for="classicGooSpeed" title="Rate of the internal classic SVG noise animation">Speed</label>
-        <input id="classicGooSpeed" type="range" min="0" max="1" step="0.001" value="0.5" style="flex:1">
+        <input id="classicGooSpeed" type="range" min="0" max="1" step="0.001" value="0.201" style="flex:1">
         <label for="classicGooSpeedAuto" class="autoToggle" style="font-size:7px; letter-spacing:0.08em; text-transform:uppercase;" title="Enable auto fade for speed">
           <input type="checkbox" id="classicGooSpeedAuto" checked> Auto
         </label>
       </div>
       <div class="sliderRow">
         <label for="classicGooAutoSpeed" title="Speed of the auto fade sweep">Auto Speed</label>
-        <input id="classicGooAutoSpeed" type="range" min="0" max="0.25" step="0.002" value="0.05">
+        <input id="classicGooAutoSpeed" type="range" min="0" max="0.25" step="0.002" value="0.16">
       </div>
       <div class="sliderRow" style="justify-content:space-between; align-items:center; gap:8px">
         <label style="font-size:11px; opacity:0.9;">Animation</label>
@@ -336,15 +336,15 @@
       </div>
 <div class="sliderRow">
         <label for="navOrbitSpeed" title="How fast bubbles orbit around Errl">Orbit</label>
-<input type="range" min="0" max="2" step="0.01" value="1.0" id="navOrbitSpeed" title="Orbit speed">
+<input type="range" min="0" max="2" step="0.01" value="1" id="navOrbitSpeed" title="Orbit speed">
       </div>
       <div class="sliderRow">
         <label for="navRadius" title="Distance of bubbles from Errl">Radius</label>
-        <input type="range" min="0.6" max="1.6" step="0.01" value="1.2" id="navRadius" title="Orbit radius">
+        <input type="range" min="0.6" max="1.6" step="0.01" value="1.26" id="navRadius" title="Orbit radius">
       </div>
       <div class="sliderRow">
         <label for="navOrbSize" title="Overall size of nav bubbles">Size</label>
-        <input type="range" min="0.6" max="1.6" step="0.01" value="1.05" id="navOrbSize" title="Nav bubble size">
+        <input type="range" min="0.6" max="1.6" step="0.01" value="1.22" id="navOrbSize" title="Nav bubble size">
       </div>
       <div class="sliderRow">
         <label for="glOrbsToggle" title="Show WebGL orb render layer (3D rendered orbs that sync with nav bubbles)">GL Orbs</label>
@@ -356,11 +356,11 @@
       <div class="sliderRow" style="opacity:.85; font-size:10px; line-height:1.3;">
         <span title="These sliders set the baseline goo feel. Slow Gradient animates around your current slider values; when not playing, the goo stays static.">Baseline goo feel. Slow Gradient animates around current sliders; otherwise it stays static.</span>
       </div>
-      <div class="sliderRow"><label for="navWiggle" title="Elastic movement blend - how much bubbles wiggle as they move">Wiggle</label><input type="range" id="navWiggle" min="0" max="1" step="0.01" value="0.4" title="Elastic movement blend - how much bubbles wiggle as they move"></div>
-      <div class="sliderRow"><label for="navFlow" title="Motion scaling - speed of the flow animation">Flow Speed</label><input type="range" id="navFlow" min="0" max="2" step="0.01" value="0.8" title="Motion scaling - speed of the flow animation"></div>
-      <div class="sliderRow"><label for="navGrip" title="Grip/Stickiness - how much bubbles resist movement (higher = more visible animation)">Grip</label><input type="range" id="navGrip" min="0" max="1" step="0.01" value="0.5" title="Grip/Stickiness - how much bubbles resist movement (higher = more visible animation)"></div>
-      <div class="sliderRow"><label for="navDrip" title="Downward bias">Drip</label><input type="range" id="navDrip" min="-1" max="1" step="0.01" value="-0.5" title="Downward bias - makes bubbles sag downward"></div>
-      <div class="sliderRow"><label for="navVisc" title="How strongly blobs merge together">Viscosity</label><input type="range" id="navVisc" min="0" max="1" step="0.01" value="0.9" title="How strongly blobs merge together"></div>
+      <div class="sliderRow"><label for="navWiggle" title="Elastic movement blend - how much bubbles wiggle as they move">Wiggle</label><input type="range" id="navWiggle" min="0" max="1" step="0.01" value="0.57" title="Elastic movement blend - how much bubbles wiggle as they move"></div>
+      <div class="sliderRow"><label for="navFlow" title="Motion scaling - speed of the flow animation">Flow Speed</label><input type="range" id="navFlow" min="0" max="2" step="0.01" value="1.07" title="Motion scaling - speed of the flow animation"></div>
+      <div class="sliderRow"><label for="navGrip" title="Grip/Stickiness - how much bubbles resist movement (higher = more visible animation)">Grip</label><input type="range" id="navGrip" min="0" max="1" step="0.01" value="0.35" title="Grip/Stickiness - how much bubbles resist movement (higher = more visible animation)"></div>
+      <div class="sliderRow"><label for="navDrip" title="Downward bias">Drip</label><input type="range" id="navDrip" min="-1" max="1" step="0.01" value="-0.02" title="Downward bias - makes bubbles sag downward"></div>
+      <div class="sliderRow"><label for="navVisc" title="How strongly blobs merge together">Viscosity</label><input type="range" id="navVisc" min="0" max="1" step="0.01" value="0.26" title="How strongly blobs merge together"></div>
       <div class="sliderRow" style="justify-content:flex-end; gap:8px">
         <button id="navSlowGradient" class="btn-animate" title="Set up Slow Gradient (uses current sliders as baselines). Animation only runs when Play is active.">Slow Gradient</button>
         <button id="navGradientPlayPause" class="btn-animate" title="Play/Pause gradient animation" aria-pressed="false" style="display:none;">Play</button>
@@ -390,11 +390,11 @@
       </div>
       <div class="sliderRow">
         <label for="hueShift" title="Angle shift across the color wheel">Hue</label>
-        <input type="range" min="0" max="360" step="1" value="0" id="hueShift" title="Hue rotation">
+        <input type="range" min="0" max="360" step="1" value="158" id="hueShift" title="Hue rotation">
       </div>
       <div class="sliderRow">
         <label for="hueSat" title="Color richness multiplier">Saturation</label>
-        <input type="range" min="0" max="2" step="0.01" value="1" id="hueSat" title="Saturation">
+        <input type="range" min="0" max="2" step="0.01" value="0.9" id="hueSat" title="Saturation">
       </div>
       <div class="sliderRow">
         <label for="hueInt" title="Mix amount of hue effect">Intensity</label>
